--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -14,6 +14,7 @@ html {
 	overflow-x: hidden;
 }
 body {
+	overflow-x: hidden;
 	background: #ffffff;
 	line-height: 1.7;
 	color: #878787;
@@ -63,10 +64,29 @@ a {
 	position: relative;
 	h1 {
 		font-size: 30px;
+		font-weight: 700;
 	}
 	.img-wrap{
 		// position: relative;
 		// transform: translateX(100%);
+	}
+}
+
+
+.site-banner {
+	background: url(../images/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    position: relative;
+	padding: 5rem 0;
+	text-align: center;
+
+	& h1 {
+		color: #fff;
+	}
+	& .breadcrumb-item a {
+		color: #fff;
 	}
 }
 
@@ -161,7 +181,7 @@ a {
 }
 .section-title {
 	font-size: 22px;
-	margin-bottom: 30px;
+	margin: 30px 0;
 	line-height: 1;
 	color: $black;
 }
@@ -230,7 +250,7 @@ a {
 }
 
 .services-section {
-	padding: 90px 0 70px 0;
+	padding: 50px 0;
 
 	.img-wrap {
 		margin-top: -200px;
